# my_pages

./: .gitignore  Makefile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/pages/dev/done_cd/: genindex.html  index.html  search.html  searchindex.js
docs/pages/dev/done_cd/_sources/: index.rst.txt
docs/source/: conf.py
main/tests/: test_init.py
