[tool.poetry]
name = "my-pages"
version = "0.1.0"
description = ""
authors = ["kenkato <yosyuaomenw@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^7.3.7"
sqlfluff = "^3.0.7"
pytest = "^8.2.2"
regex = "^2024.5.15"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
